--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Baalam-1.3"
+CONFIG_LOCALVERSION="-Parak-Karakah-Kernel"
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
