--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -680,3 +680,14 @@ CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 # BOEFFLA WL BLOCKER
 #
 CONFIG_BOEFFLA_WL_BLOCKER=y
+
+CONFIG_GCC_VERSION=0
+CONFIG_CC_IS_CLANG=y
+CONFIG_LD_IS_LLD=y
+CONFIG_CLANG_VERSION=150000
+CONFIG_LLD_VERSION=150000
+CONFIG_CC_HAS_ASM_GOTO=y
+CONFIG_TOOLS_SUPPORT_RELR=y
+CONFIG_IRQ_WORK=y
+CONFIG_BUILDTIME_EXTABLE_SORT=y
+CONFIG_THREAD_INFO_IN_TASK=y
